force-app/core/main/default/objects/Demo_Stage__c/Demo_Stage__c.object-meta.xml
<CustomObject>
    <label>Demo Stage</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Stage ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>