force-app/core/main/default/objects/Demo_Stage__c/fields/Content_JSON__c.field-meta.xml
<CustomField>
    <fullName>Content_JSON__c</fullName>
    <label>Content JSON</label>
    <description>Per-stage content tokens (copy, images, messages array) fed to the render engine.</description>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>