force-app/core/main/default/objects/Demo_Stage__c/fields/Stage_Type__c.field-meta.xml
<CustomField>
    <fullName>Stage_Type__c</fullName>
    <label>Stage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Browse</fullName><default>true</default><label>Browse</label></value>
            <value><fullName>Intent Capture</fullName><default>false</default><label>Intent Capture</label></value>
            <value><fullName>Cart or Form</fullName><default>false</default><label>Cart or Form</label></value>
            <value><fullName>Nurture</fullName><default>false</default><label>Nurture</label></value>
            <value><fullName>Complete</fullName><default>false</default><label>Complete</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>