force-app/core/main/default/objects/Demo_Stage__c/fields/Story__c.field-meta.xml
<CustomField>
    <fullName>Story__c</fullName>
    <label>Story</label>
    <referenceTo>Demo_Story__c</referenceTo>
    <relationshipLabel>Stages</relationshipLabel>
    <relationshipName>Stages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>