force-app/core/main/default/objects/Demo_Stage__c/fields/Surface__c.field-meta.xml
<CustomField>
    <fullName>Surface__c</fullName>
    <label>Surface</label>
    <description>Content zone / surface identifier this stage targets (e.g. homepage_hero, market_insight_1).</description>
    <length>80</length>
    <type>Text</type>
</CustomField>